added new Blocks
- Added Ruby/Ore
- Added Sapphire/Ore
-Added Crafting Recipes Between Blocks - Items

--- a/src/main/resources/assets/stuffnthings/lang/en_us.json
+++ b/src/main/resources/assets/stuffnthings/lang/en_us.json
@@ -1,4 +1,11 @@
 {
   "item.stuffnthings.sapphire": "Sapphire",
-  "item.stuffnthings.ruby": "Ruby"
+  "item.stuffnthings.ruby": "Ruby",
+
+  "block.stuffnthings.ruby_block": "Ruby Block",
+  "block.stuffnthings.sapphire_block": "Sapphire Block",
+
+
+  "block.stuffnthings.ruby_ore" : "Ruby Ore",
+  "block.stuffnthings.sapphire_ore" : "Sapphire Ore"
 }
