--- a/src/main/resources/assets/stuffnthings/lang/en_us.json
+++ b/src/main/resources/assets/stuffnthings/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.stuffnthings.sapphire": "Sapphire",
   "item.stuffnthings.ruby": "Ruby",
+  "item.stuffnthings.a_stick": " \"A Stick\" ",
 
   "block.stuffnthings.ruby_block": "Ruby Block",
   "block.stuffnthings.sapphire_block": "Sapphire Block",
