Added Haste block

--- a/src/main/resources/assets/stuffnthings/lang/en_us.json
+++ b/src/main/resources/assets/stuffnthings/lang/en_us.json
@@ -5,6 +5,7 @@
 
   "block.stuffnthings.ruby_block": "Ruby Block",
   "block.stuffnthings.sapphire_block": "Sapphire Block",
+  "block.stuffnthings.haste_block": "Haste Block",
 
 
   "block.stuffnthings.ruby_ore" : "Ruby Ore",
