--- a/src/main/resources/assets/stuffnthings/lang/en_us.json
+++ b/src/main/resources/assets/stuffnthings/lang/en_us.json
@@ -2,6 +2,8 @@
   "item.stuffnthings.sapphire": "Sapphire",
   "item.stuffnthings.ruby": "Ruby",
   "item.stuffnthings.a_stick": " \"A Stick\" ",
+  "item.stuffnthings.tomato": "Tomato",
+  "item.stuffnthings.tiny_coal": "Tiny Coal",
 
   "block.stuffnthings.ruby_block": "Ruby Block",
   "block.stuffnthings.sapphire_block": "Sapphire Block",
@@ -11,5 +13,6 @@
   "block.stuffnthings.ruby_ore" : "Ruby Ore",
   "block.stuffnthings.deepslate_ruby_ore" : "Deepslate Ruby Ore",
   "block.stuffnthings.deepslate_sapphire_ore" : "Deepslate Sapphire Ore",
+  "block.stuffnthings.deepslate_charcoal_block" : "Block of Charcoal",
   "block.stuffnthings.sapphire_ore" : "Sapphire Ore"
 }
